# vision-track

./: .gitignore  CONTRIBUTING.md  Dockerfile  EDA.ipynb  makefile  pyproject.toml
.github/workflows/: ci.yml  realse.yml
.ipynb_checkpoints/: EDA-checkpoint.ipynb
runs/detect/models/person_detector/: args.yaml
tests/: test_data_pipeline.py  test_env.py
utils/: analysis.py  coco_manager.py  data_manager.py  preprocessing.py  trainer.py  visualizer.py
utils/.ipynb_checkpoints/: data_manager-checkpoint.py
